# MyCPlusPlus

./: CMakeLists.txt  CMakeLists.txt.in  README.md
MockExample1/: CMakeLists.txt
MockExample1/lib/: CMakeLists.txt  order.cpp  order.hpp
MockExample1/tests/: CMakeLists.txt  cmake_install.cmake  mail_service_mock.hpp  order_test.cpp  warehouse_mock.hpp
MockExample2/: CMakeLists.txt
MockExample2/lib/: painter.h  turtle.h
MockExample2/tests/: CMakeLists.txt  painter_test.cpp
TestExample1/: CMakeLists.txt
TestExample1/lib/: queue.h
TestExample1/tests/: CMakeLists.txt  queue_test.cpp
contrib/gtest/: CMakeLists_gtest.txt
src/: hello.cc  hello.h  mainProduct.cc
test/src/: hello_test.cc
